<resources>
    <string name="app_name">My Account</string>

    <string name="action_settings">Settings</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_main">StartMenu</string>

    <string name="enterPoint">Go for it!</string>
    <string name="menuHeader">Main Menu</string>
    <string name="calculator">Calculator</string>
    <string name="album">Album</string>
    <string name="changePassword">Settings</string>
    <string name="passRequest">Enter new password:</string>
    <string name="passRepeat">Reenter one more time:</string>
    <string name="goInternet">Google Search</string>
    <string name="goPhone">Make Phone Call</string>
    <string name="goEmail">Send Email</string>
    <string name="goSms">Send SMS</string>
    <string name="goWhatsApp">Send WhatsApp Message</string>
    <string name="goCamera">Use Camera</string>
    <string name="goSettings">Settings</string>

</resources>
